Code/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
20:00:02 **** Incremental Build of configuration Release for project Routenplaner ****
make all 
Building file: ../Hello.cpp
Invoking: Cross G++ Compiler
g++ -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"Hello.d" -MT"Hello.d" -o "Hello.o" "../Hello.cpp"
../Hello.cpp:34:2: error: use of undeclared identifier 'sleep'
        sleep(80);
        ^
1 error generated.
make: *** [Hello.o] Error 1
